...
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="Find Your Local Businesses"
        android:textColor="@color/whiteText"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/search_now_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.336" />

    <TextView
...
