<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteText"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bus_name"
            tools:text="In details activity!"
            style="@style/detail_title_textview" />

        <TextView
            android:id="@+id/long_descrip"
            style="@style/DetailsPageText"
            android:layout_marginBottom="12dp"
            android:textSize="17sp"
            tools:text="long descrip" />

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/carouselView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            app:fillColor="#FFFFFFFF"
            app:pageColor="#00000000"
            app:radius="6dp"
            app:slideInterval="5000"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp">

        </com.synnapps.carouselview.CarouselView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/website_icon"
                app:srcCompat="@drawable/website_icon"
                style="@style/detail_icon_style" />

            <TextView
                android:id="@+id/website"
                style="@style/DetailsPageText"
                tools:text="website" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/email_icon"
                app:srcCompat="@drawable/email_icon"
                style="@style/detail_icon_style" />

            <TextView
                android:id="@+id/email"
                style="@style/DetailsPageText"
                tools:text="email" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/phone_icon"
                app:srcCompat="@drawable/phone_icon"
                style="@style/detail_icon_style" />

            <TextView
                android:id="@+id/phone_number"
                style="@style/DetailsPageText"
                tools:text="07123456789" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/address_icon"
                app:srcCompat="@drawable/address_icon"
                style="@style/detail_icon_style" />

            <TextView
                android:id="@+id/address"
                style="@style/DetailsPageText"
                tools:text="address" />
        </LinearLayout>


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            tools:context=".activities.MapsActivity" />

    </LinearLayout>
</ScrollView>